unsure what was done here unknown

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <label for="author">Author: </label>
                         <input type="text" name="author" id="author" placeholder="Author of book..." required>
                         <label for="pages">Pages: </label>
-                        <input type="number" name="pages" id="pages" placeholder="Number of pages..." required>
+                        <input type="number" name="pages" id="pages" placeholder="Number of pages..." min="1" max="150000" required>
                         <div class="checkboxGroup">
                             <input type="checkbox" name="readStatus" id="readStatus">
                             <label for="readStatus">Mark as already read?</label>
