--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="header">
         <h1>Library Project</h1>
         <button class="dialogBtn" id="showDialog">Add Book</button>
+        <button class="dialogBtn" onclick="testFunction()">page count sort</button>
+        <button class="dialogBtn" onclick="testFunction2()">title sort</button>
+        <button class="dialogBtn" onclick="testFunction3()">author sort</button>
         <div class="dialogBackdrop" id="dialogBackdrop">
             <dialog id="dialog">
                 <div class="dialogHeader">
@@ -43,7 +46,7 @@
         
     </div>
     <footer>
-        <a href="https://github.com/TyDieGuy99" target="_blank"><img src="photos/github.png" style="width:50px;height:50px;" alt="github logo" id="githubLogo"></a>
+        <a href="https://github.com/TyDieGuy99" target="_blank"><img src="photos/github.png" alt="github logo" id="githubLogo"></a>
     </footer>
         
 </body> 
