changed button wording and gave ids gave sort buttons unique ids

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="headerRight">
             <button class="dialogBtn" onclick="defaultOrder()">Default</button>
-            <button class="dialogBtn" onclick="testFunction()">Sort by Page Count</button>
-            <button class="dialogBtn" onclick="testFunction2()">Sort by Title</button>
-            <button class="dialogBtn" onclick="testFunction3()">Sort by Author</button>     
+            <button class="dialogBtn" id="pageSortBtn" onclick="testFunction()">Sort by Page Count &uarr;</button>
+            <button class="dialogBtn" id="titleSortBtn" onclick="testFunction2()">Sort by Title (A-Z)</button>
+            <button class="dialogBtn" id="authorSortBtn" onclick="testFunction3()">Sort by Author (A-Z)</button>     
         </div>
         <div class="dialogBackdrop" id="dialogBackdrop">
             <dialog id="dialog">
