added h2 div containers, changed text of btns added header above sort buttons, change their text, add is now +

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <header id="header">
         <div class="headerLeft">
             <h1>Library Project</h1>
-            <button class="dialogBtn" id="showDialog">Add Book</button>
+            <button class="dialogBtn" id="showDialog">+</button>
         </div>
         <div class="headerRight">
-            <button class="dialogBtn" onclick="defaultOrder()">Default</button>
-            <button class="dialogBtn" id="pageSortBtn">Sort by; Low to High</button>
-            <button class="dialogBtn" id="titleSortBtn">Sort by Title; (A-Z)</button>
-            <button class="dialogBtn" id="authorSortBtn">Sort by Author; (A-Z)</button>     
+            <h2>Sort By:</h2>
+            <div class="sortBtnContainer">
+                <button class="dialogBtn" onclick="defaultOrder()">Default</button>
+                <button class="dialogBtn" id="pageSortBtn">Pages; Low to High</button>
+                <button class="dialogBtn" id="titleSortBtn">Title; (A-Z)</button>
+                <button class="dialogBtn" id="authorSortBtn">Author; (A-Z)</button>
+            </div>     
         </div>
         <div class="dialogBackdrop" id="dialogBackdrop">
             <dialog id="dialog">
