removed onClick from default btn, gave id now has id defaultSortBtn, removed onClick function inline

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="headerRight">
             <h2>Sort By:</h2>
             <div class="sortBtnContainer">
-                <button onclick="defaultOrder()">Default</button>
+                <button id="defaultSortBtn">Default</button>
                 <button id="pageSortBtn">Pages; Low to High</button>
                 <button id="titleSortBtn">Title; (A-Z)</button>
                 <button id="authorSortBtn">Author; (A-Z)</button>
