closeBtn uses id not class now easier for DOM

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <dialog id="dialog">
                 <div class="dialogHeader">
                         <h2>Add a book:</h2>
-                        <button class="closeBtn" onclick="closeDialog();">&times;</button>
+                        <button id="closeBtn" onclick="closeDialog();">&times;</button>
                     </div>
                 <form class="validate" method="dialog" id="bookInfo">
                     
