removed btn onClick events removed last onClick events inline, gave ids

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <dialog id="dialog">
                 <div class="dialogHeader">
                         <h2>Add a book:</h2>
-                        <button id="closeBtn" onclick="closeDialog();">&times;</button>
+                        <button id="closeBtn">&times;</button>
                     </div>
                 <form class="validate" method="dialog" id="bookInfo">
                     
@@ -44,7 +44,7 @@
     
                         </div>
                     <input type="submit" value="Submit" id="submit">
-                    <button id="cancelBtn" onclick="closeDialog();">Cancel</button>
+                    <button id="cancelBtn">Cancel</button>
                 </form>
             </dialog>
         </div> 
