added classes to sort buttons sort buttons have class sortBtn

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="headerRight">
             <h2>Sort By:</h2>
             <div class="sortBtnContainer">
-                <button id="defaultSortBtn">Default</button>
-                <button id="pageSortBtn">Pages; Low to High</button>
-                <button id="titleSortBtn">Title; (A-Z)</button>
-                <button id="authorSortBtn">Author; (A-Z)</button>
+                <button class="sortBtn" id="defaultSortBtn">Default</button>
+                <button class="sortBtn" id="pageSortBtn">Pages; Low to High</button>
+                <button class="sortBtn" id="titleSortBtn">Title; (A-Z)</button>
+                <button class="sortBtn" id="authorSortBtn">Author; (A-Z)</button>
             </div>     
         </div>
         <div class="dialogBackdrop" id="dialogBackdrop">
